Add basic camera zoom controls (buttons + wheel)

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <button id="spawnAgentButton">+ Agent</button>
         <button id="spawnResourceButton">+ Resource</button>
         <button id="forceBrushButton" data-mode="force">Force Brush</button>
+        <button id="zoomInButton">Zoom +</button>
+        <button id="zoomOutButton">Zoom −</button>
       </div>
       <div class="status">
         <span id="tickLabel">Tick: 0</span>
