--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Reality Sandbox</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css?v=20260223-2" />
 </head>
 <body>
   <main class="app">
@@ -20,6 +20,6 @@
     <canvas id="world" aria-label="Reality Sandbox world"></canvas>
   </main>
 
-  <script type="module" src="app.js"></script>
+  <script type="module" src="app.js?v=20260223-2"></script>
 </body>
 </html>
