perf: add lightweight FPS and step-time overlay

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <p class="status">
         <span id="tickLabel">Tick: 0</span>
         <span>Seed: <code id="seedValue"></code></span>
+        <span id="perfLabel">FPS: -- | Step: --ms</span>
       </p>
     </header>
 
